# Whirlpool

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_2.md  CODE_REVIEW_3.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: AGENTS.md  index.html
tests/: AGENTS.md  __init__.py  test_cli.py  test_engine.py  test_knowledge.py  test_output.py  test_parser_edge_cases.py  test_parsers.py  test_sample_data.py  test_version_range.py  test_windows_analysis.py
tests/sample_data/: AGENTS.md  linpeas_sample.txt  winpeas_sample.txt
tests/sample_data/real_world/: AGENTS.md
whirlpool/: AGENTS.md  __init__.py  cli.py
whirlpool/data/: AGENTS.md  gtfobins.json  kernel_exploits.json  lolbas.json  potato_matrix.json
whirlpool/engine/: AGENTS.md  __init__.py  analyzer.py  chain.py  ranker.py
whirlpool/knowledge/: AGENTS.md  __init__.py
whirlpool/knowledge/linux/: AGENTS.md  __init__.py
whirlpool/knowledge/windows/: AGENTS.md  __init__.py
whirlpool/output/: AGENTS.md  __init__.py  json_out.py  markdown.py  terminal.py
whirlpool/parser/: AGENTS.md  __init__.py  linpeas.py  manual_linux.py  manual_windows.py  winpeas.py
