[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whirlpool"
dynamic = ["version"]
description = "Privilege Escalation Reasoning Engine - Analyze enumeration output and generate exploitation playbooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Whirlpool Contributors"}
]
keywords = [
    "security",
    "privilege-escalation",
    "pentesting",
    "ctf",
    "enumeration",
    "linpeas",
    "winpeas"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]

dependencies = [
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[project.scripts]
whirlpool = "whirlpool.cli:main"

[project.urls]
Homepage = "https://github.com/Real-Fruit-Snacks/Whirlpool"
Documentation = "https://github.com/Real-Fruit-Snacks/Whirlpool#readme"
Repository = "https://github.com/Real-Fruit-Snacks/Whirlpool"
Issues = "https://github.com/Real-Fruit-Snacks/Whirlpool/issues"

[tool.setuptools.dynamic]
version = {attr = "whirlpool.__version__"}

[tool.setuptools]
packages = [
    "whirlpool",
    "whirlpool.parser",
    "whirlpool.engine",
    "whirlpool.output",
    "whirlpool.knowledge",
    "whirlpool.knowledge.linux",
    "whirlpool.knowledge.windows",
]
include-package-data = true

[tool.setuptools.package-data]
whirlpool = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
